@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="iso-8859-1" ?>
 <otrs_config version="1.0" init="Framework">
-    <CVS>$Id: Framework.xml,v 1.245 2009-09-21 13:14:58 mb Exp $</CVS>
+    <CVS>$Id: Framework.xml,v 1.246 2009-09-22 11:41:20 mg Exp $</CVS>
     <ConfigItem Name="SecureMode" Required="1" Valid="1">
         <Description Lang="en">If enabled, the web installer (http://yourhost.example.com/otrs/installer.pl) can't be used. This setting should be set to "Yes" to prevent your system from being hijacked. If set to "No", you can reinstall your system. Your current basic configuration will be used to pre-populate the questions within the installer script. Also disables if not active, the GenericAgent, PackageManager and SQL Box, since it's possible to use it for destructive write queries such as DROP DATABASE, and also to steal user passwords.</Description>
         <Description Lang="de">Wird diese Option aktiviert, kann der Web-Installer (installer.pl) nicht genutzt werden. Auch deaktiviert sind der GenericAgent, der PackageManager und die SQL Box im Admin-Interface, bis diese Einstellung aktiviert wurde.</Description>
@@ -223,6 +223,24 @@
                 <Item Key="0">No</Item>
                 <Item Key="1">Yes</Item>
             </Option>
+        </Setting>
+    </ConfigItem>
+    <ConfigItem Name="Frontend::RichTextWidth" Required="1" Valid="1">
+        <Description Lang="en">Width for RichText editor component. Enter number (pixels) or percent value (relative).</Description>
+        <Description Lang="de">Breite f?r RichText-Editor-Komponente. Geben Sie eine Zahl (Pixel) oder einen Prozentwert (relativ) an.</Description>
+        <Group>Framework</Group>
+        <SubGroup>Core::Web</SubGroup>
+        <Setting>
+            <String Regex="^\d+%?$">620</String>
+        </Setting>
+    </ConfigItem>
+    <ConfigItem Name="Frontend::RichTextHeight" Required="1" Valid="1">
+        <Description Lang="en">Height for RichText editor component. Enter number (pixels) or percent value (relative).</Description>
+        <Description Lang="de">H?he f?r RichText-Editor-Komponente. Geben Sie eine Zahl (Pixel) oder einen Prozentwert (relativ) an.</Description>
+        <Group>Framework</Group>
+        <SubGroup>Core::Web</SubGroup>
+        <Setting>
+            <String Regex="^\d+%?$">320</String>
         </Setting>
     </ConfigItem>
     <ConfigItem Name="Frontend::RichText::DefaultCSS" Required="1" Valid="1">
