@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1008 2009-09-22 09:55:33 mg Exp $
+# $Id: CHANGES,v 1.1009 2009-09-22 11:41:21 mg Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -24,6 +24,7 @@
  - (2009/09/15) Improved performance of the PDF backend.
 
 2.4.5 (2009/??/??)
+ - (2009/09/21) Fixed bug#3408 - Richtext editor - editor windows is way to small.
  - (2009/09/21) Fixed bug#4188 - Moving junk mails unnecessarily need subject and body.
  - (2009/09/21) Fixed bug#4189 - RTE off inserts a blank line in the text editor field.
  - (2009/09/21) Fixed bug#4080 - Rich editors javascript overrides onload function.
